package SuperEasyShare.entities;

public abstract class Rate {

    public abstract int total(Trip trip);
}
